QT/aws/cloudformation/ntire-vpc/ntire-vpc.json
{
    "Parameters": {
        "vpccidr": {
            "Description": "parameter for vpc cidr block",
            "Type": "String",
            "Default": "192.168.0.0/16"
        },
        "subnetcidr": {
            "Description": "parameter for subnet cidr block",
            "Type": "CommaDelimitedList",
            "Default": "192.168.0.0/24,192.168.1.0/24,192.168.2.0/24,192.168.3.0/24,192.168.4.0/24,192.168.5.0/24"
        },
        "zone1": {
            "Description": "zone1 for web1. app1, db1",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        },
        "zone2": {
            "Description": "zone2 for web2, app2, db2",
            "Type": "AWS::EC2::AvailabilityZone::Name"
        }
    },
    "Resources": {
        "cfvpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "vpccidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "cfvpc"
                    }
                ]
            }
        },
        "web1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        0,
                        {
                            "Ref": "subnetcidr"
                        }
                    ]
                },
                "AvailabilityZone": {
                    "Ref": "zone1"
                },
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "web1"
                    }
                ]
            }
        },
        "web2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        1,
                        {
                            "Ref": "subnetcidr"
                        }
                    ]
                },
                "AvailabilityZone": {
                    "Ref": "zone2"
                },
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "web2"
                    }
                ]
            }
        },
        "app1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        2,
                        {
                            "Ref": "subnetcidr"
                        }
                    ]
                },
                "AvailabilityZone": {
                    "Ref": "zone1"
                },
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "app1"
                    }
                ]
            }
        },
        "app2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        3,
                        {
                            "Ref": "subnetcidr"
                        }
                    ]
                },
                "AvailabilityZone": {
                    "Ref": "zone2"
                },
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "app2"
                    }
                ]
            }
        },
        "db1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        4,
                        {
                            "Ref": "subnetcidr"
                        }
                    ]
                },
                "AvailabilityZone": {
                    "Ref": "zone1"
                },
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "db1"
                    }
                ]
            }
        },
        "db2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        5,
                        {
                            "Ref": "subnetcidr"
                        }
                    ]
                },
                "AvailabilityZone": {
                    "Ref": "zone2"
                },
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "db2"
                    }
                ]
            }
        },


        
        "itgw1": {
          "Type": "AWS::EC2::InternetGateway",
          "Properties": {
            "Tags": [{"Key":"Name", "Value": "itgw1"}]
          }
        },
        "AttachGateway": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "VpcId": { "Ref": "cfvpc" },
            "InternetGatewayId": { "Ref": "itgw1" }
          }
        },
        
        "publicrttb1": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "cfvpc" },
            "Tags": [{"Key": "Name", "Value": "publicrttb1"}]
          }
        },
        "publicrt1": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": { "Ref": "publicrttb1" },
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": { "Ref": "itgw1" }
          }
        },
        "routeTableAssocName": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": { "Ref": "web1" },
            "RouteTableId": { "Ref": "publicrttb1" }
          }
        },
        
        
        
        

        "websg": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "websg created with cf",
                "GroupName": "websg",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "FromPort": -1,
                        "ToPort": -1,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "websg"
                    }
                ]
            }
        },
        "appsg": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "appsg created with cf",
                "GroupName": "appsg",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "FromPort": -1,
                        "ToPort": -1,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "appsg"
                    }
                ]
            }
        },
        "dbsg": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "dbsg created with cf",
                "SecurityGroupEgress": [
                    {
                        "IpProtocol": "-1",
                        "FromPort": -1,
                        "ToPort": -1,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 3306,
                        "ToPort": 3306,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "cfvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "dbsg"
                    }
                ]
            }
        },
        

        "cfrdssubnetgroup": {
           "Type": "AWS::RDS::DBSubnetGroup",
           "Properties": {
              "DBSubnetGroupDescription": "group for rds instance",
              "SubnetIds": [ 
              { "Ref": "db1" },
              { "Ref": "db2" } ],
              "Tags": [ {"Key": "Name", "Value": "cfrdssubnetgroup" } ]
           }
        },
        "cfdbinstance": {
          "Type": "AWS::RDS::DBInstance",
          "Properties": {
            "AllocatedStorage": "20",
            "DBInstanceClass": "db.t2.micro",
            "AllowMajorVersionUpgrade": "false",
            "AutoMinorVersionUpgrade": "false",
            "AvailabilityZone": {"Ref": "zone2"},
            "DBInstanceIdentifier": "cfdbinstance",
            "DBName": "cfdb",
            "DBSubnetGroupName": {"Ref": "cfrdssubnetgroup"},
            "Engine": "mysql",
            "MasterUsername": "root",
            "MasterUserPassword": "password2022",
            "MultiAZ": "false",
            "Port": "3306",
            "PubliclyAccessible": "false",
            "StorageEncrypted": "false",
            "VPCSecurityGroups": [ { "Ref": "dbsg" } ],
            "Tags": [ {"Key": "Name", "Value": "cfdbinstance"} ]
          }
        },
        
        
        "webinstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "AvailabilityZone": {"Ref": "zone1"},
                
                "NetworkInterfaces": [ {
                    "AssociatePublicIpAddress": "true",
                    "DeviceIndex": "0",
                    "GroupSet": [{"Ref": "websg"}],
                    "SubnetId" : {"Ref": "web1"}
                } ],
                "KeyName": "laptop",
                "ImageId": "ami-062df10d14676e201",
                "InstanceType": "t2.micro",
                "Monitoring": "false",
                
                "Tags": [{ "Key": "Name", "Value": "webinstance"}]
            }
        }
    }
}
